--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,41 +1,41 @@
 server.port=9001
 
 #### MariaDB Database Settings ###
-#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://localhost:3306/auth_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&autoreconnect=true
-#spring.datasource.username=root
-##spring.datasource.password=oblongata
-#spring.datasource.password=0244996826ly
-#spring.datasource.initialization-mode=always
-#
-### Hibernate Properties
-## The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
-#
-## Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto = update
-#
-#spring.jpa.properties.hibernate.format_sql=true
-
-
-###### H2 Database settings ####
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.platform=h2
-spring.jpa.show-sql=false
-
-spring.jpa.open-in-view=false
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
-spring.jpa.properties.hibernate.format_sql=false
-
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/auth_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&autoreconnect=true
+spring.datasource.username=root
+#spring.datasource.password=oblongata
+spring.datasource.password=0244996826ly
 spring.datasource.initialization-mode=always
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+spring.jpa.properties.hibernate.format_sql=true
+
+
+###### H2 Database settings ####
+#spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.platform=h2
+#spring.jpa.show-sql=false
+#
+#spring.jpa.open-in-view=false
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+#spring.jpa.properties.hibernate.format_sql=false
+#
+#spring.datasource.initialization-mode=always
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#
+#
+### Hibernate Properties
+## The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
